# partialize

./: .gitignore  ChangeLog.md  asv.conf.json  pyproject.toml
benchmarks/: time_partialize.py
env/541b6fbd95fdb429e84621bc981fbd19/: asv-install-status.json
env/541b6fbd95fdb429e84621bc981fbd19/include/: python3.6m
env/541b6fbd95fdb429e84621bc981fbd19/lib/python3.6/: LICENSE.txt  __future__.py  _bootlocale.py  _collections_abc.py  _dummy_thread.py  _weakrefset.py  abc.py  base64.py  bisect.py  codecs.py  collections  config-3.6m-x86_64-linux-gnu  copy.py  copyreg.py  encodings  enum.py  fnmatch.py  functools.py  genericpath.py  hashlib.py  heapq.py  hmac.py  imp.py  importlib  io.py  keyword.py  lib-dynload  linecache.py  locale.py  ntpath.py  operator.py  orig-prefix.txt  os.py  posixpath.py  random.py  re.py  reprlib.py  rlcompleter.py  shutil.py  sre_compile.py  (+11 more)
partialize/: __init__.py
results/: benchmarks.json
results/haw10009593/: 94065d79-virtualenv-py3.6.json  machine.json
test/: test_partialize.py
