[tool.poetry]
name = "partialize"
version = "0.1.0"
description = "Function partial decorator"
authors = ["Dean Shaff <dshaff@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
asv = "^0.3.1"
virtualenv = "^16.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
